# RustyShell

./: Cargo.toml  README.md
src/: builtin_cmd.rs  example.py  logger.rs  main.rs  plugins.rs
src/config/: preferences.json
src/plugins/: stdout.rs
