[package]
name = "rust-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
chrono = "0.4.24"
colored = "2.0.0"
crossterm = "0.26.1"
directories = "5.0.1"
log = "0.4.17"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
rustyline = { version = "11.0.0", features = ["with-file-history"] }
serde_json = "1.0.96"
shellwords = "1.1.0"
simplelog = "0.12.1"
sys = "0.0.0"
term_size = "0.3.2"
walkdir = "2.3.3"
